Now, when user create the task he can choose the list, in which task will be stored (morning routine, etc). Data saves in localStorage.

--- a/src/style.css
+++ b/src/style.css
@@ -12,11 +12,10 @@ main {
   margin: 0 auto;
 }
 
-footer {
-  position: absolute;
-  bottom: 0;
-}
-
 .hidden {
   display: none;
+}
+
+.chosen-proj {
+  font-weight: bold;
 }
