Selected color scheme for app, started work at UI

--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,25 @@
-html,
+:root {
+  --white: #DAE3E5;
+  --light: #BBD1EA;
+  --light2: #A1C6EA;
+  --blue: #507DBC;
+  --dark: #04080F;
+}
+
 body {
   margin: 0;
+  background-color: var(--white)
+}
+
+header {
+  background-color: var(--dark);
+  color: var(--light);
+  padding: 2rem 0;
 }
 
 h1 {
   text-align: center;
+  margin-top: 0;
 }
 
 main {
@@ -14,6 +29,19 @@ main {
 
 .hidden {
   display: none;
+}
+
+#projects {
+  display: flex;
+  gap: 10px;
+  list-style: none;
+}
+
+#projects li {
+  border: 1px solid var(--light);
+  padding: 5px 7px;
+  background-color: var(--dark);
+  color: var(--light)
 }
 
 .chosen-proj {
